--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -382,14 +382,17 @@ article:hover * {
   transition: transform 330ms ease-in-out;
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-device-width: 768px) {
   article {
-    margin: 0px;
+    size: 50%;
   }
 
+  .menu {
+    width: 100%;
+  }
   .menu > * {
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 
   .trait, .trait-bleu-fonce, .trait-bleu, .trait-bleu-clair {
@@ -397,10 +400,19 @@ article:hover * {
   }
   .trait h3, .trait-bleu-fonce h3, .trait-bleu h3, .trait-bleu-clair h3 {
     visibility: visible;
+    display: inline;
   }
 
   .box p:nth-child(2) {
     font-weight: bold;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .pied a {
+    font-size: 20px;
   }
 }
 
