--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -93,6 +93,10 @@ a {
         height: 500px;
         margin: 0;
         margin-bottom: 50px;
+        font-size: 20px;
+        .titre{
+            font-size: 25px;
+        }
     }
     .menu{
         width: 100%;
@@ -116,15 +120,27 @@ a {
         font-size: 30px;
     }
     .pied{
+        height: 60px;
         a{
             font-size: 20px;
-
         }
     }
     .btn{
         width: 320px;
         font-size: 28px;
     }
-    
-    
+}
+
+@media all and (max-width:768px){
+    .trait,.trait-bleu-fonce,.trait-bleu,.trait-bleu-clair{
+        margin: 0px;
+        visibility: hidden;
+        h3{
+            visibility:visible;
+            display: inline;
+        }
+    }
+    .box p:nth-child(2){
+        font-weight: bold;
+    }
 }
